[gd_scene load_steps=36 format=3 uid="uid://cfe4gkd7hbca5"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_6ieus"]
[ext_resource type="Texture2D" uid="uid://idxd1a4wlicp" path="res://sprites/characters/Standard Shadow.png" id="1_kmkhi"]
[ext_resource type="Texture2D" uid="uid://bv2p0mtbdlfjx" path="res://sprites/characters/player placeholder/Placeholder character shadowless.png" id="2_mhp66"]
[ext_resource type="Script" path="res://scenes/SpriteAnimator.gd" id="4_ylm11"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wvuad"]
atlas = ExtResource("2_mhp66")
region = Rect2(0, 0, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tbwl"]
atlas = ExtResource("2_mhp66")
region = Rect2(26, 0, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0m8i"]
atlas = ExtResource("2_mhp66")
region = Rect2(52, 0, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehi31"]
atlas = ExtResource("2_mhp66")
region = Rect2(0, 36, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_gigkc"]
atlas = ExtResource("2_mhp66")
region = Rect2(26, 36, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqo2k"]
atlas = ExtResource("2_mhp66")
region = Rect2(52, 36, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_187ki"]
atlas = ExtResource("2_mhp66")
region = Rect2(0, 72, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_og36q"]
atlas = ExtResource("2_mhp66")
region = Rect2(26, 72, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixfi1"]
atlas = ExtResource("2_mhp66")
region = Rect2(52, 72, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvlnk"]
atlas = ExtResource("2_mhp66")
region = Rect2(0, 108, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqelk"]
atlas = ExtResource("2_mhp66")
region = Rect2(26, 108, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dr7f"]
atlas = ExtResource("2_mhp66")
region = Rect2(52, 108, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_fphm8"]
atlas = ExtResource("2_mhp66")
region = Rect2(26, 72, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_2s02f"]
atlas = ExtResource("2_mhp66")
region = Rect2(26, 108, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3sbk"]
atlas = ExtResource("2_mhp66")
region = Rect2(26, 0, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ud7ok"]
atlas = ExtResource("2_mhp66")
region = Rect2(26, 36, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0ndu"]
atlas = ExtResource("2_mhp66")
region = Rect2(0, 72, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ga6s6"]
atlas = ExtResource("2_mhp66")
region = Rect2(26, 72, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0lrs"]
atlas = ExtResource("2_mhp66")
region = Rect2(52, 72, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_l26wv"]
atlas = ExtResource("2_mhp66")
region = Rect2(0, 108, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8hj5"]
atlas = ExtResource("2_mhp66")
region = Rect2(26, 108, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0w3p"]
atlas = ExtResource("2_mhp66")
region = Rect2(52, 108, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38fg"]
atlas = ExtResource("2_mhp66")
region = Rect2(0, 0, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_k46pq"]
atlas = ExtResource("2_mhp66")
region = Rect2(26, 0, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgg6v"]
atlas = ExtResource("2_mhp66")
region = Rect2(52, 0, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3qpm"]
atlas = ExtResource("2_mhp66")
region = Rect2(52, 36, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_kktv6"]
atlas = ExtResource("2_mhp66")
region = Rect2(26, 36, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddyyc"]
atlas = ExtResource("2_mhp66")
region = Rect2(0, 36, 26, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_305d1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvuad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tbwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0m8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehi31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gigkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqo2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_187ki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_og36q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixfi1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvlnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqelk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dr7f")
}],
"loop": true,
"name": &"PlayerAll",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fphm8")
}],
"loop": true,
"name": &"p idle e",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2s02f")
}],
"loop": true,
"name": &"p idle n",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3sbk")
}],
"loop": true,
"name": &"p idle s",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ud7ok")
}],
"loop": true,
"name": &"p idle w",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0ndu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ga6s6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0lrs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ga6s6")
}],
"loop": true,
"name": &"player east",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l26wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8hj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0w3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8hj5")
}],
"loop": true,
"name": &"player north",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38fg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k46pq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgg6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k46pq")
}],
"loop": true,
"name": &"player south",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3qpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kktv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddyyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kktv6")
}],
"loop": true,
"name": &"player west",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_84kls"]
radius = 3.0
height = 13.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vwscm"]
radius = 4.0
height = 16.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_6ieus")

[node name="Shadow" type="Sprite2D" parent="."]
texture = ExtResource("1_kmkhi")

[node name="PlayerCharacter" type="Node2D" parent="."]

[node name="PlayerCharacterSprite" type="AnimatedSprite2D" parent="PlayerCharacter"]
sprite_frames = SubResource("SpriteFrames_305d1")
animation = &"player west"

[node name="SpriteAnimator" type="Node2D" parent="PlayerCharacter/PlayerCharacterSprite"]
script = ExtResource("4_ylm11")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 14)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_84kls")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 14)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_vwscm")

[node name="ITimer" type="Timer" parent="."]
one_shot = true

[node name="KTimer" type="Timer" parent="."]
one_shot = true

[node name="BTimer" type="Timer" parent="."]

[node name="PositionAnchor" type="Node2D" parent="."]
position = Vector2(-0.5, 14)

[connection signal="timeout" from="ITimer" to="." method="_on_i_timer_timeout"]
[connection signal="timeout" from="KTimer" to="." method="_on_k_timer_timeout"]
[connection signal="timeout" from="BTimer" to="." method="_on_b_timer_timeout"]
